crates/compiler/cypress/tests/snapshots/test_parse__type_annotated_function.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "t:d,T->r\nt=e\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginTypeOrTypeAlias
            Ident=>LowerIdent@0
            InlineTypeColon=>OpColon@1
            (*
                Ident=>LowerIdent@2
                TypeName=>UpperIdent@4
                InlineTypeArrow=>OpArrow@5
                Ident=>LowerIdent@6
            EndTypeLambda)
        EndTypeOrTypeAlias)
        (BeginAssign
            Ident=>LowerIdent@7
            InlineAssign=>OpAssign@8
            Ident=>LowerIdent@9
        EndAssign)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
TypeAlias(Ident("t"), Lambda([Name("d"), Name("T")], Name("r")))
Assign(Ident("t"), Ident("e"))

[=== formatted below ===]

