crates/compiler/cypress/tests/snapshots/test_parse__type_decl_with_underscore_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "doStuff : UserId -> Task Str _\n42\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginTypeOrTypeAlias
            Ident=>LowerIdent@0
            InlineTypeColon=>OpColon@1
            (*
                TypeName=>UpperIdent@2
                InlineLambdaArrow=>OpArrow@3
                (*
                    TypeName=>UpperIdent@4
                    (* TypeName=>UpperIdent@5 Underscore=>Underscore@6 EndTypeApply)
                EndTypeApply)
            EndTypeLambda)
        EndTypeOrTypeAlias)
        HintExpr
        Num=>Int@7
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
TypeAlias(Ident("doStuff"), Lambda([Name("UserId")], Apply(Name("Task"), [Apply(Name("Str"), [Infer])])))
IntBase10("42")

[=== formatted below ===]

