crates/compiler/cypress/tests/snapshots/test_parse__type_signature_def_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "foo : Int\nfoo = 4\n\n42\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginTypeOrTypeAlias
            Ident=>LowerIdent@0
            InlineTypeColon=>OpColon@1
            TypeName=>UpperIdent@2
        EndTypeOrTypeAlias)
        (BeginAssignDecl
            Ident=>LowerIdent@3
            InlineAssign=>OpAssign@4
            Num=>Int@5
        EndAssignDecl)
        HintExpr
        Num=>Int@6
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
TypeAlias(Ident("foo"), Name("Int"))
Assign(Ident("foo"), IntBase10("4"))
IntBase10("42")

[=== formatted below ===]

